about page text

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,7 +58,6 @@ body > header {
   flex-direction: column;
 }
 
-.titles {
-  display: flex;
-  justify-content: space-between;
+a {
+  color: currentColor;
 }
