--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -85,8 +85,13 @@
             background-color: #ffffff;
             border-radius: 0rem 1rem 1rem 0;
         }
+        @media screen and (min-width: 768px) {
+            padding: 2rem;
+            
+        }
     }
     @media screen and (min-width: 768px) {
         position: relative;
+        
     }
 }
