--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -11,14 +11,30 @@
 
     z-index: 200;
 
+    @supports not (width: -webkit-fill-available) {
+        width: 100%;
+    }
+
     &__wrapper {
         display: flex;
         position: absolute;
         flex-direction: column;
+        overflow: hidden;
         left: 0.5rem;
         right: 0.5rem;
         top: 0.5rem;
         bottom: 0.5rem;
+        @supports not (
+            (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+        ) {
+            border-radius: 1rem;
+            background-color: rgba($color: #333333, $alpha: 0.8);
+            &::after {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
     &__controls {
         display: flex;
@@ -48,12 +64,21 @@
         width: 100%;
         height: 100%;
 
-        background-color: rgba(0, 0, 0, 0.1);
-        // border: 2px solid white;
-        box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.8);
-        backdrop-filter: blur(5px);
         border-radius: 1rem;
         z-index: -1;
+        @supports (
+            (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+        ) {
+            background-color: rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(5px);
+        }
+        @supports not (
+            (-webkit-backdrop-filter: blur(5px)) or (backdrop-filter: blur(5px))
+        ) {
+            background-color: #ffffff;
+            // filter: blur(1px);
+        }
 
         @media screen and (min-width: 768px) {
             background-color: rgba(255, 255, 255, 0.1);
@@ -87,11 +112,9 @@
         }
         @media screen and (min-width: 768px) {
             padding: 2rem;
-            
         }
     }
     @media screen and (min-width: 768px) {
         position: relative;
-        
     }
 }
