--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -94,7 +94,7 @@
         overflow-y: auto;
 
         &::-webkit-scrollbar-track {
-            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
         }
         &::-webkit-scrollbar {
             width: 0.5rem;
