--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -9,6 +9,7 @@
     &__items {
         padding: 0;
         list-style: none;
+        text-align: center;
     }
     &__item {
         display: inline-block;
